# Pac-Man

./: .gitignore  README.md  cli.py  main.py  pyproject.toml
checkpoints/dqn/3af88528-ca2d-4697-8bf9-136efa356bed/: checkpoint.pkl
checkpoints/dqn/8af2e326-b625-49a3-8a2d-55eb17272310/: checkpoint.pkl  params
checkpoints/qlearn/: e8afe3cc-573e-4034-8384-97e0e7fe66dc.pkl
checkpoints/value_iteration/: 93a6276c-3059-4b7a-b577-4c2486def572.pkl
config/: config.yaml
config/controller/: dqn.yaml  dqn_ghosts.yaml  qlearn.yaml  qlearn_ghosts.yaml  random.yaml  reinforce.yaml  value_iteration.yaml
config/environment/: basic.yaml  ghosts.yaml
src/: main.py  pacman_runner.py
src/controller/: README.md  __init__.py  basic.py  controller.py  dqn.py  qlearn.py  reinforce.py  value_iteration.py
src/drawer/: drawer.py  pygame.py
src/environment/: __init__.py  basic.py  basic_ghosts.py  environment.py
src/environment/ghosts/: __init__.py  ghost.py
src/environment/ghosts/strategy/: __init__.py  ghost_strategy.py  random.py
src/evaluation/: __init__.py  eval.py
src/state/: __init__.py  state.py
