[tool.poetry]
name = "pac-man"
version = "0.1.0"
description = ""
authors = ["Alexander-Ploskin <ploskin0107@gmail.com>", "Danil Tokhchukov <danilkes@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.2"
pygame = "^2.6.1"
click = "^8.1.7"
hydra-core = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
